--- a/kisaan-backend-node/Dockerfile
+++ b/kisaan-backend-node/Dockerfile
@@ -41,8 +41,8 @@ COPY --from=build /app/dist ./dist
 # Copy schema files so unified-schema.sql is available at runtime
 COPY --from=build /app/schema ./dist/schema
 
-# Copy migrations so runtime can discover SQL/TS migrations
-COPY --from=build /app/src/migrations ./dist/src/migrations
+# Copy only SQL migrations (compiled JS migrations already in dist from tsc)
+COPY --from=build /app/src/migrations/*.sql ./dist/src/migrations/
 
 # Create non-root user for security
 RUN addgroup -g 1001 -S nodejs && \
