feat: add PAGES_TOKEN secret for GitHub Pages deployment

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -127,6 +127,7 @@ jobs:
       uses: actions/configure-pages@v4
       with:
         enablement: true
+        token: ${{ secrets.PAGES_TOKEN }}
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
@@ -144,6 +145,8 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
+      with:
+        token: ${{ secrets.PAGES_TOKEN }}
 
     - name: Deployment Summary
       env:
