--- a/kisaan-backend-node/railway.toml
+++ b/kisaan-backend-node/railway.toml
@@ -2,7 +2,7 @@
 builder = "dockerfile"
 
 [deploy]
-startCommand = "npm run db:bootstrap && npm start"
+startCommand = "npm run db:bootstrap:prod && npm start"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
