--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,12 @@
     {
       "source": "/api/(.*)",
       "destination": "https://kisaan-center-production.up.railway.app/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+  "cleanUrls": true,
+  "trailingSlash": false
 }
