--- a/kisaan-frontend/vercel.json
+++ b/kisaan-frontend/vercel.json
@@ -8,14 +8,25 @@
   },
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "https://kisaan-center-production.up.railway.app/api/$1"
+      "source": "/api/:path*",
+      "destination": "https://kisaan-center-production.up.railway.app/api/:path*"
     },
     {
-      "source": "/(.*)",
+      "source": "/:path*",
       "destination": "/index.html"
     }
   ],
-  "cleanUrls": true,
-  "trailingSlash": false
+  "cleanUrls": false,
+  "trailingSlash": false,
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ]
 }
