--- a/vercel.json
+++ b/vercel.json
@@ -3,27 +3,17 @@
   "public": true,
   "buildCommand": "cd kisaan-frontend && npm run build",
   "outputDirectory": "kisaan-frontend/dist",
-  "rewrites": [
+  "env": {
+    "VITE_API_BASE_URL": "@vite_api_base_url"
+  },
+  "routes": [
     {
-      "source": "/api/:path*",
-      "destination": "https://kisaan-center-production.up.railway.app/api/:path*"
+      "src": "^/api/(.*)$",
+      "dest": "https://kisaan-center-production.up.railway.app/api/$1"
     },
     {
-      "source": "/:path*",
-      "destination": "/index.html"
-    }
-  ],
-  "cleanUrls": false,
-  "trailingSlash": false,
-  "headers": [
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
+      "src": "^/(?!assets/)(.*)$",
+      "dest": "/index.html"
     }
   ]
 }
