--- a/vercel.json
+++ b/vercel.json
@@ -9,13 +9,20 @@
   "routes": [
     {
       "src": "^/api/(.*)$",
-      "dest": "https://kisaan-center-production.up.railway.app/api/$1"
+      "dest": "https://kisaan-center-production.up.railway.app/api/$1",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
     },
     {
-      "src": "^/(?!assets/)(.*)$",
+      "src": "^/assets/(.*)$",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "^/(?!api|assets).*$",
       "dest": "/index.html"
     }
   ]
 }
+
+
 
 
