--- a/vercel.json
+++ b/vercel.json
@@ -13,15 +13,20 @@
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
     },
     {
-      "src": "^/assets/(.*)$",
-      "dest": "/assets/$1"
+      "src": "^/assets/.*$",
+      "dest": "/assets/:splat"
     },
     {
-      "src": "^/(?!api|assets).*$",
+      "src": "^/(?:favicon\\.ico|robots\\.txt|sitemap\\.xml)$",
+      "status": 404
+    },
+    {
+      "src": ".*",
       "dest": "/index.html"
     }
   ]
 }
+
 
 
 
