--- a/vercel.json
+++ b/vercel.json
@@ -8,21 +8,45 @@
   },
   "routes": [
     {
-      "src": "^/api/(.*)$",
+      "src": "^/api/(.*)",
       "dest": "https://kisaan-center-production.up.railway.app/api/$1",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"]
     },
     {
-      "src": "^/assets/.*$",
-      "dest": "/assets/:splat"
+      "src": "^/assets/(.*)$",
+      "dest": "/assets/$1"
     },
     {
-      "src": "^/(?:favicon\\.ico|robots\\.txt|sitemap\\.xml)$",
-      "status": 404
+      "src": "^/favicon\\.ico$",
+      "dest": "/favicon.svg"
     },
     {
-      "src": ".*",
+      "src": "^/robots\\.txt$",
+      "dest": "/robots.txt"
+    },
+    {
+      "src": "^/(.*)$",
       "dest": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
     }
   ]
 }
