--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -71,3 +71,9 @@ jobs:
       run: |
         echo "✅ Frontend build completed successfully"
         echo "📦 Frontend is ready for Vercel deployment"
+
+    - name: 🚀 Trigger Vercel Deployment
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      run: |
+        curl -X POST "https://api.vercel.com/v1/integrations/git/deploy-hook/${{ secrets.VERCEL_DEPLOY_HOOK }}" \
+          -H "Content-Type: application/json"
