--- a/vercel.json
+++ b/vercel.json
@@ -6,52 +6,14 @@
   "env": {
     "VITE_API_BASE_URL": "@vite_api_base_url"
   },
-  "routes": [
+  "rewrites": [
     {
-      "src": "^/api/(.*)",
-      "dest": "https://kisaan-center-production.up.railway.app/api/$1",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"]
+      "source": "/api/:path*",
+      "destination": "https://kisaan-center-production.up.railway.app/api/:path*"
     },
     {
-      "src": "^/assets/(.*)$",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "^/favicon\\.ico$",
-      "dest": "/favicon.svg"
-    },
-    {
-      "src": "^/robots\\.txt$",
-      "dest": "/robots.txt"
-    },
-    {
-      "src": "^/(.*)$",
-      "dest": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
-        }
-      ]
+      "source": "/:path*",
+      "destination": "/index.html"
     }
   ]
 }
-
-
-
-
-
