Fix: Correct build command and output directory for root-level frontend

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
   "public": true,
-  "buildCommand": "cd kisaan-frontend && npm run build",
-  "outputDirectory": "kisaan-frontend/dist",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/api/:path*",
