--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,19 @@
 {
   "version": 2,
-  "public": true,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "framework": null,
   "rewrites": [
     {
       "source": "/api/:path*",
       "destination": "https://kisaan-center-production.up.railway.app/api/:path*"
-    },
+    }
+  ],
+  "redirects": [
     {
-      "source": "/:path*",
-      "destination": "/index.html"
+      "source": "/((?!api/).*)",
+      "destination": "/404.html",
+      "statusCode": 200
     }
   ]
 }
